fixed color and spacing of shaunalynn's rear-card info

--- a/assets/css/people.css
+++ b/assets/css/people.css
@@ -33,22 +33,6 @@
 #shaunalynn #picture {
     width: 200px;
 }
-#shaunalynn #pic-credit {
-    color: white;
-    position: absolute;
-    background: rgba(0, 0, 0, .8);
-    width: 200px;
-    font-size: 10px;
-    font-family: Helvetica, sans-serif;
-    padding: 5px 0 5px 0;
-    text-align: center;
-    bottom: 0;
-    left: 0;
-}
-#shaunalynn a {
-    color: #ccc;
-    text-decoration: none;
-}
 
 
 /****************************************************************************/
